--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/big.js": "^6.0.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.19.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
